# basic_features

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: config.h
game/: CMakeLists.txt
game/include/Game/: Game.h  Player.h
game/src/: main.cpp
game/src/Game/: Game.cpp  Player.cpp
gameStart/: CMakeLists.txt
gameStart/src/: main.cpp
tests/: CMakeLists.txt  hello_text.cpp
tests/test_game/: player_test.cpp
